k8s/templates/cluster-ingress-egress/rsync-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: rsync
spec:
  podSelector:
    matchLabels:
      io.kompose.network/rsync: "true"
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - port: 10873
        - port: 873
    - from:
        - ipBlock:
            cidr: ::0/0
      ports:
        - port: 10873
        - port: 873
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - port: 10873
        - port: 873
    - to:
        - ipBlock:
            cidr: ::/0
      ports:
        - port: 10873
        - port: 873
