k8s/templates/cluster-ingress-egress/tools-ietf-org-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: tools-ieft-org
spec:
  podSelector:
    matchLabels:
      io.kompose.network/tools-ieft-org: "true"
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 64.170.98.42/32
      ports:
        - port: 80
        - port: 443
